Fri Jul 18 13:49:30 GMT 2003 Jim Segrave <jes@jes-2.nl.demon.net>

	* backgammon.h eval.h gnubg.c rollout.c rollout.h progress.c
	  progress.h set.c gtkgame.c gtkgame.h 
	  Fixes to rollout extension, allow rollout stop on JSD of moves
	  fix 'set output digits' command
	
Fri Jul 18 10:12:40 2003  Joern Thyssen  <jth@gnubg.org>

	* text.c (OutputMWC): strip some '+' signs from output of
	standard error values.

Thu Jul 17 21:59:37 2003  Holger Bochnig <hbgg@gmx.net>

	Sockets support on Windows
	getting the dice from random.org now works on Windows, too

	* gnubg.c (real_main, Shutdown): Winsock initialisation and cleanup
	* dice.c (getDiceRandomDotOrg), external.c (ExternalSocket,
	  ExternalRead, ExternalWrite):
	  use send and recv, adjusting to different function definitions

Thu Jul 17 14:46:45 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkchequer.c (UpdateMoveList): use Output* functions instead of
	hardcoded logic.

Thu Jul 17 12:29:20 2003  Joern Thyssen  <jth@gnubg.org>

	Some changes to the match statistics:
	(a) output ppg advantage for money game
	(b) REMOVE output of abs. fibs rating
	(c) add output of relative fibs rating based on luck adj. results

        * html.c (HTMLDumpStatcontext), gtkgame.c (GTKDumpStatcontext), 
        analysis.c (DumpStatcontext): see above.

Wed Jul 16 21:28:23 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (CommandHint): move code into a set of subroutines.
	* gnubg.c (CommandRollout): call new functions HintCube and HintChequer.

Wed Jul 16 21:21:08 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkoptions.c: introduce gui equivalent to "set output digits ..."
	(suggested by Olivier Croisille)

Wed Jul 16 18:49:11 2003  Joern Thyssen  <jth@gnubg.org>

	Introduce flag to set the numbers of digits output for
	probabilities and equities.
	(derived from bug #4236 by Ian Shaw)

	* gnubg.c: new command "set output digits ..."			
	* text.c (OutputEquity, OutputMoneyEquity, OutputEquityScale,